Added sample for loading data from a data model.

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         </activity>
 
         <activity android:name=".features.events.views.EventsActivity"/>
+
+        <activity android:name=".features.loading_data.views.LoadingDataActivity"/>
     </application>
 
 </manifest>
