--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,18 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+VERSION_NAME=0.0.1
+VERSION_CODE=1
+GROUP=com.github.seishin.rxmvp
+
+POM_DESCRIPTION=Easy to use Reactive MVP library
+POM_URL=https://github.com/Seishin/rxmvp-android
+POM_SCM_URL=https://github.com/Seishin/rxmvp-android
+POM_SCM_CONNECTION=https://github.com/Seishin/rxmvp-android.git
+POM_SCM_DEV_CONNECTION=https://github.com/Seishin/rxmvp-android.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=seishin
+POM_DEVELOPER_NAME=Atanas Dimitrov
